# BaiChenTest

./: .gitignore  .pdm-python  pyproject.toml
common/: csvdata.py  excelfile.py
common/pandas_test/: pandas_serial.py
src/: taobao.py  viptest.py
src/Data/Excel/: manual_match_order_serial.xlsx
src/SHOP/: Buy.py  BuyTime.py  Buy_v01.py  Buy_v02.py  buyV20.py  test.py
src/common/: basemethod.py  db_pyodbc.py  db_test.py  excelfile.py  file_path.py
src/common/pandas_test/: pandas_dataframe.py  pandas_serial.py
src/config/: server_data.yaml
src/selenium_test/: selenium_demo1.py
src/tests/: Buy.py  BuyTime.py
